Add fetching user info. Still need adjusting.

--- a/public/register.html
+++ b/public/register.html
@@ -15,6 +15,31 @@ Service Type:<br>
     <option value="xc">xc</option>
     <option value="烫发">烫发</option>
 </select>
+
+<div class="weui-cells weui-cells_checkbox">
+    <label class="weui-cell weui-check__label" for="s11">
+        <div class="weui-cell__hd">
+            <input class="weui-check" name="checkbox1" id="s11" checked="checked" type="checkbox">
+            <i class="weui-icon-checked"></i>
+        </div>
+        <div class="weui-cell__bd">
+            <p>standard is dealt for u.</p>
+        </div>
+    </label>
+    <label class="weui-cell weui-check__label" for="s12">
+        <div class="weui-cell__hd">
+            <input name="checkbox1" class="weui-check" id="s12" type="checkbox">
+            <i class="weui-icon-checked"></i>
+        </div>
+        <div class="weui-cell__bd">
+            <p>standard is dealicient for u.</p>
+        </div>
+    </label>
+    <a href="javascript:void(0);" class="weui-cell weui-cell_link">
+        <div class="weui-cell__bd">添加更多</div>
+    </a>
+</div>
+
 <br><br>
 <input type="submit" value="Submit"></fieldset>
 <a href="javascript:;" class="weui-btn weui-btn_primary">按钮</a>
