Add register page ui js to repo.

--- a/public/helloworld.html
+++ b/public/helloworld.html
@@ -209,7 +209,7 @@
 -->
 
 <div class="weui-btn-area">
-    <a class="weui-btn weui-btn_primary" href="javascript:" id="showTooltips">确定</a>
+    <a class="weui-btn weui-btn_primary" href="javascript:" id="showTooltips">排队理发</a>
 </div>
 </body>
 </html>
