socket.io tweek no.2

--- a/public/register.html
+++ b/public/register.html
@@ -23,7 +23,7 @@
     <div class="weui-cell">
 	  <div class="weui-cell__hd"><label class="weui-label">姓名</label></div>
         <div class="weui-cell__bd">
-            <input class="weui-input" type="text" placeholder="请输入姓名"/>
+            <input class="weui-input" type="text" placeholder="请输入姓名" id="testid"/>
         </div>
   	</div>
     <div class="weui-cell">
