Tweeking socket.io

--- a/public/register.html
+++ b/public/register.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <title>Untitled Document</title>
 <link href="stylesheets/weui.css" rel="stylesheet" type="text/css" media="screen">
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="javascripts/register_ui.js"></script>
+
 </head>
 
 <body>
@@ -211,9 +215,5 @@
 <div class="weui-btn-area">
     <a class="weui-btn weui-btn_primary" href="javascript:;" id="submit">排队理发</a>
 </div>
-
-<script type="text/javascript" src="javascripts/register_ui.js"></script>
-<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
