--- a/public/register.html
+++ b/public/register.html
@@ -33,7 +33,7 @@
     <div class="weui-cell">
 		<div class="weui-cell__hd"><label class="weui-label">手机号</label></div>
         <div class="weui-cell__bd">
-            <input class="weui-input" type="text" placeholder="请输入手机号"/>
+            <input class="weui-input" type="number" placeholder="请输入手机号"/>
         </div>
     </div>
 
