--- a/public/register.html
+++ b/public/register.html
@@ -27,13 +27,13 @@
     <div class="weui-cell">
 	  <div class="weui-cell__hd"><label class="weui-label">姓名</label></div>
         <div class="weui-cell__bd">
-            <input class="weui-input" type="text" placeholder="请输入姓名" id="testid"/>
+            <input class="weui-input" type="text" placeholder="请输入姓名" id="name"/>
         </div>
   	</div>
     <div class="weui-cell">
 		<div class="weui-cell__hd"><label class="weui-label">手机号</label></div>
         <div class="weui-cell__bd">
-            <input class="weui-input" type="number" placeholder="请输入手机号"/>
+            <input class="weui-input" type="tel" placeholder="请输入手机号" id="telnumber"/>
         </div>
     </div>
 
@@ -42,9 +42,9 @@
             <label for="" class="weui-label">性别</label>
         </div>
         <div class="weui-cell__bd">
-            <select class="weui-select" name="sex">
-                <option value="1">男</option>
-                <option value="2">女</option>
+            <select class="weui-select" name="sex" id="sex">
+                <option value="male">男</option>
+                <option value="female">女</option>
             </select>
         </div>
     </div>
