Add montor page. Experimenting with express static server.

--- a/public/register.html
+++ b/public/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>晓晨理发💈</title>
 <link href="stylesheets/weui.css" rel="stylesheet" type="text/css" media="screen">
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
