Successful loading of different web pages.

--- a/public/queue_monitor.html
+++ b/public/queue_monitor.html
@@ -3,8 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>晓晨理发</title>
-
 <link href="stylesheets/weui.css" rel="stylesheet" type="text/css" media="screen">
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="javascripts/monitor_ui.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
