--- a/public/register.html
+++ b/public/register.html
@@ -7,7 +7,7 @@
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="javascripts/register_ui.js"></script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
