Renamed barberQueue file to barber_queue. Implemented client side customer info display.

--- a/public/queue_monitor.html
+++ b/public/queue_monitor.html
@@ -97,16 +97,29 @@
 -->
 <div class="weui-panel">
     <div class="weui-panel__hd">队伍中的顾客</div>
-    <div class="weui-panel__bd">
+    <div class="weui-panel__bd" id="queue_list">
+<!--
         <div class="weui-media-box weui-media-box_text">
             <h4 class="weui-media-box__title">服务类型</h4>
             <p class="weui-media-box__desc">备注，有什么写什么，包括顾客的特殊需求</p>
-            <ul class="weui-media-box__info">
+            <ol class="weui-media-box__info">
                 <li class="weui-media-box__info__meta">顾客姓名</li>
                 <li class="weui-media-box__info__meta">顾客性别</li>
                 <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">电话</li>
-            </ul>
+            </ol>
         </div>
+        <div class="weui-media-box weui-media-box_text">
+            <h4 class="weui-media-box__title">服务类型</h4>
+            <p class="weui-media-box__desc">备注，有什么写什么，包括顾客的特殊需求</p>
+            <ol class="weui-media-box__info">
+                <li class="weui-media-box__info__meta">顾客姓名</li>
+                <li class="weui-media-box__info__meta">顾客性别</li>
+                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">电话</li>
+            </ol>
+        </div>
+-->
+    </div>
+    <div class="weui-panel__bd">
     </div>
 </div>
 <!--
