--- a/public/queue_monitor.html
+++ b/public/queue_monitor.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>晓晨理发</title>
-<link href="stylesheets/weui.css" rel="stylesheet" type="text/css" media="screen">
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+<link href="stylesheets/weui.css" rel="stylesheet" type="text/css" media="screen">
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="javascripts/monitor_ui.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -204,5 +204,61 @@
     </a>
 </div>
 -->
+<div class="page__bd page__bd_spacing">
+        <a href="javascript:;" class="weui-btn weui-btn_default" id="showIOSActionSheet">iOS ActionSheet</a>
+        <a href="javascript:;" class="weui-btn weui-btn_default" id="showAndroidActionSheet">Android ActionSheet</a>
+    </div>
+<div>
+	<div class="weui-mask" id="iosMask" style="opacity: 1;display: none"></div>
+	<div class="weui-actionsheet" id="iosActionsheet">
+		<div class="weui-actionsheet__title">
+			<p class="weui-actionsheet__title-text">这是一个标题，可以为一行或者两行。</p>
+		</div>
+		<div class="weui-actionsheet__menu">
+			<div class="weui-actionsheet__cell">示例菜单</div>
+			<div class="weui-actionsheet__cell">示例菜单</div>
+			<div class="weui-actionsheet__cell">示例菜单</div>
+			<div class="weui-actionsheet__cell">示例菜单</div>
+		</div>
+		<div class="weui-actionsheet__action">
+			<div class="weui-actionsheet__cell" id="iosActionsheetCancel">取消</div>
+		</div>
+	</div>
+</div>
 </body>
+<!--
+<script type="text/javascript">
+    // ios
+    $(function(){
+        var $iosActionsheet = $('#iosActionsheet');
+        var $iosMask = $('#iosMask');
+
+        function hideActionSheet() {
+            $iosActionsheet.removeClass('weui-actionsheet_toggle');
+            $iosMask.fadeOut(200);
+        }
+
+        $iosMask.on('click', hideActionSheet);
+        $('#iosActionsheetCancel').on('click', hideActionSheet);
+        $("#showIOSActionSheet").on("click", function(){
+            $iosActionsheet.addClass('weui-actionsheet_toggle');
+            $iosMask.fadeIn(200);
+        });
+    });
+	
+    // android
+    $(function(){
+        var $androidActionSheet = $('#androidActionsheet');
+        var $androidMask = $androidActionSheet.find('.weui-mask');
+
+        $("#showAndroidActionSheet").on('click', function(){
+            $androidActionSheet.fadeIn(200);
+            $androidMask.on('click',function () {
+                $androidActionSheet.fadeOut(200);
+            });
+        });
+    });
+</script>
+-->
+
 </html>
