Try to implement customer removal. Improving docs.

--- a/public/queue_monitor.html
+++ b/public/queue_monitor.html
@@ -98,6 +98,7 @@
 <div class="weui-panel">
     <div class="weui-panel__hd">队伍中的顾客</div>
     <div class="weui-panel__bd" id="queue_list">
+<!--
         <div class="weui-media-box weui-media-box_text" id="hello">
             <h4 class="weui-media-box__title">服务类型</h4>
             <p class="weui-media-box__desc">备注，有什么写什么，包括顾客的特殊需求</p>
@@ -107,6 +108,7 @@
                 <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">电话</li>
             </ol>
         </div>
+-->
     </div>
     <div class="weui-panel__bd">
     </div>
@@ -201,13 +203,10 @@
 	<div class="weui-mask" id="iosMask" style="opacity: 1;display: none"></div>
 	<div class="weui-actionsheet" id="iosActionsheet">
 		<div class="weui-actionsheet__title">
-			<p class="weui-actionsheet__title-text">这是一个标题，可以为一行或者两行。</p>
+			<p class="weui-actionsheet__title-text">请选择操作</p>
 		</div>
 		<div class="weui-actionsheet__menu">
-			<div class="weui-actionsheet__cell">示例菜单</div>
-			<div class="weui-actionsheet__cell">示例菜单</div>
-			<div class="weui-actionsheet__cell">示例菜单</div>
-			<div class="weui-actionsheet__cell">示例菜单</div>
+			<div class="weui-actionsheet__cell">删除</div>
 		</div>
 		<div class="weui-actionsheet__action">
 			<div class="weui-actionsheet__cell" id="iosActionsheetCancel">取消</div>
