Implelments redirections between pages.

--- a/public/queue_monitor.html
+++ b/public/queue_monitor.html
@@ -12,7 +12,7 @@
 
 <body>
 <div class="weui-btn-area-right">
-    <a href="javascript:;" class="weui-btn weui-btn_mini weui-btn_primary"></a>
+    <a href="./register?monitoring=yes" class="weui-btn weui-btn_mini weui-btn_primary" id="add_customer">添加顾客</a>
 </div>
 
 <!--
