Add success page. Impelemented customer removal on monitor page.

--- a/public/queue_monitor.html
+++ b/public/queue_monitor.html
@@ -211,7 +211,10 @@
 			<p class="weui-actionsheet__title-text">请选择操作</p>
 		</div>
 		<div class="weui-actionsheet__menu">
-			<div class="weui-actionsheet__cell">删除</div>
+			<div class="weui-actionsheet__cell" id="move_up">上移</div>
+			<div class="weui-actionsheet__cell" id="move_down">下移</div>
+			<div class="weui-actionsheet__cell" id="modify">修改</div>
+			<div class="weui-actionsheet__cell" id="delete"><font color="re#000000">删除</font></div>
 		</div>
 		<div class="weui-actionsheet__action">
 			<div class="weui-actionsheet__cell" id="iosActionsheetCancel">取消</div>
