--- a/public/success.html
+++ b/public/success.html
@@ -17,7 +17,7 @@
         <div class="weui-msg__opr-area">
             <p class="weui-btn-area">
                 <a href="javascript:wx.closeWindow();" class="weui-btn weui-btn_primary">返回微信</a>
-                <a href="javascript:history.back();" class="weui-btn weui-btn_default">修改信息</a>
+<!--                <a href="javascript:history.back();" class="weui-btn weui-btn_default">修改信息</a>-->
             </p>
         </div>
         <div class="weui-msg__extra-area">
