Add local jquery script

--- a/public/queue_monitor.html
+++ b/public/queue_monitor.html
@@ -3,7 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>晓晨理发</title>
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+<!-- <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> -->
+<!-- <script type="text/javascript">
+!window.jQuery && document.write('<script src="javascripts/jquery-3.2.1.min.js"><\/script>');
+</script> -->
+<script type="text/javascript" src="javascripts/jquery-3.2.1.min.js"></script>
 <link href="stylesheets/weui.css" rel="stylesheet" type="text/css" media="screen">
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="javascripts/monitor_ui.js"></script>
@@ -100,7 +104,7 @@
 </div>
 -->
 <div class="weui-panel">
-   
+
     <div class="weui-panel__hd">队伍中的顾客</div>
     <div class="weui-panel__bd" id="queue_list">
 <!--
