--- a/public/queue_monitor.html
+++ b/public/queue_monitor.html
@@ -9,7 +9,7 @@
 </script> -->
 <script type="text/javascript" src="javascripts/jquery-3.2.1.min.js"></script>
 <link href="stylesheets/weui.css" rel="stylesheet" type="text/css" media="screen">
-<script src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="javascripts/monitor_ui.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
